# pgjwt_rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  deny.toml  docker-test.sh  package.sh  pgjwt_rs.control
.github/: dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  security.yml  tests.yml
sql/: pgjwt_rs--0.1.0.sql  pgjwt_rs--0.1.1.sql  pgjwt_rs--0.1.2.sql
src/: lib.rs
