[package]
name = "pgjwt_rs"
version = "0.1.0"
edition = "2021"
authors = ["Vish Vishvanath <coder@vishvish.com>"]
description = "PostgreSQL extension for JWT verification with RS256 and Ed25519 support"
license = "AGPL-3.0-only"
repository = "https://github.com/vishvish/pgjwt_rs"
homepage = "https://github.com/vishvish/pgjwt_rs"
keywords = ["postgresql", "jwt", "authentication", "crypto", "extension"]
categories = ["authentication", "cryptography", "database"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto", "use_pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
