[package]
name = "pgjwt_rs"
version = "0.1.3"
edition = "2021"
authors = ["Vish Vishvanath <coder@vishvish.com>"]
description = "PostgreSQL extension for JWT verification with RS256 and Ed25519 support"
license = "MIT"
repository = "https://github.com/vishvish/pgjwt_rs"
homepage = "https://github.com/vishvish/pgjwt_rs"
keywords = ["postgresql", "jwt", "authentication", "crypto", "extension"]
categories = ["authentication", "cryptography", "database"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg18"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "=0.17.0"
ring = "0.17"
pem = "3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"

[dev-dependencies]
pgrx-tests = "=0.17.0"
ring = "0.17"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
